# libEqNibbler

./: CMakeLists.txt  README.md  example_cpp.cpp
interface/: simple_math.py  test.py
source/: clsMath.cpp  clsMath.hpp  libEqNibbler.cpp  libEqNibbler.hpp  libSimpleMath.cpp  libSimpleMath.hpp  python_interface.cpp
